import com.github.spotbugs.snom.SpotBugsTask

plugins {
	id 'java'
	id 'jacoco'
	id 'checkstyle'
	id 'com.github.spotbugs' version '6.4.8'
	id 'org.springframework.boot' version '4.0.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.syncapi'
version = '0.0.1-SNAPSHOT'
description = 'API testing and documentation platform'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
	runtimeOnly 'org.postgresql:postgresql'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation "org.testcontainers:testcontainers:2.0.3"
	testImplementation 'org.testcontainers:testcontainers-postgresql'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

checkstyle {
	toolVersion = '10.12.4'
}

spotbugs {
	toolVersion = '4.9.8'
	effort = 'max'
	reportLevel = 'medium'
	excludeFilter = file('spotbugs-exclude.xml')
}

tasks.withType(SpotBugsTask).configureEach {
	reports {
		html.required = true
		xml.required = false
	}
}

tasks.named('check') {
	dependsOn 'checkstyleMain', 'spotbugsMain'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
	jvmArgs '-XX:+EnableDynamicAgentLoading'
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
	}
}
